testsuite/tests/checks/outbound_protected_assign/test.out
prot.adb:6:10: error: assignment from protected body to outside object
6 |          Var := I;           --  FLAG
  |          ^^^^^^^^^ 

